# DataScience_HF_MLOps

./: .dockerignore  AGENTS.md  Dockerfile  GUIDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd-image.yml  cd-text.yml  ci.yml  docker.yml
api/: main.py
api/routes/: image.py  text.py
app/: image_app.py  text_app.py
configs/: image-config.yaml  text-config.yaml
data/image/: README.md
data/text/: sample_data.csv
recipes/aws-cloudrun/: README.md
recipes/aws-lambda-sam/: README.md  template.yaml
recipes/azure/: README.md
recipes/gcp-cloudrun/: README.md
src/: config.py
src/image_classifier/: data.py  evaluate.py  inference.py  train.py
src/shared/: hub.py  utils.py
src/text_classifier/: data.py  evaluate.py  inference.py  train.py
tests/: test_image_data.py  test_image_model.py  test_inference.py  test_text_data.py  test_text_model.py
